@@ -102,13 +102,15 @@ The following additional Perl modules are required to use it:
 
 \bullet(packed)[File::BaseDir]
 \bullet(packed)[File::ShareDir]
-\bullet(packed)[IO::Compress::Xz (part of IO-Compress-LZMA)]
+\bullet(packed)[IO::Uncompress::Gunzip (part of IO-Compress)]
+\bullet(packed)[IO::Compress::Xz (part of IO-Compress-Lzma)]
 \bullet(packed)[IPC::Run]
 \bullet(packed)[IPC::System::Simple]
 \bullet(packed)[JSON::MaybeXS]
 \bullet(packed)[Kwalify]
 \bullet(packed)[List::SomeUtils]
 \bullet(packed)[Perl6::Slurp]
+\bullet(packed)[Pod::Usage]
 \bullet(packed)[Template (part of Template Toolkit)]
 \bullet(packed)[YAML::XS]
 
