@@ -16,6 +16,15 @@ DocKnot 4.01 (unreleased)
     The -d option to docknot dist is now optional if distdir is set in
     DocKnot's global configuration file.
 
+    Remove the load_appdata_json helper function from App::DocKnot.  This
+    is no longer used now that all DocKnot data is in YAML.
+
+    Properly depend on and import Pod::Usage so that docknot --help works.
+
+    Correct the REQUIREMENTS sections of the module documentation to
+    reflect new dependencies and the removal of a JSON dependency from
+    most of DocKnot.
+
 DocKnot 4.00 (2020-12-25)
 
     Change the metadata format to a single YAML file, with a slightly
